samples/_failures_safe/1761513111_fa87c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb5f1558.c: In function ‘main’:
./samples/SAFE/__tmp_fb5f1558.c:162:5: error: expected identifier or ‘(’ at end of input
  162 |     char
      |     ^~~~
./samples/SAFE/__tmp_fb5f1558.c:162:5: error: expected declaration or statement at end of input
